<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_usabilla_app_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_app_id"/>

    <Button
        android:id="@+id/btn_usabilla_init_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_initialize" />

    <EditText
        android:id="@+id/edit_usabilla_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_name"/>

    <Button
        android:id="@+id/btn_usabilla_custom_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_event" />

    <EditText
        android:id="@+id/edit_usabilla_variable_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_variable_name"/>

    <EditText
        android:id="@+id/edit_usabilla_variable_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_variable_value"/>

    <Button
        android:id="@+id/btn_usabilla_set_custom_variable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_variable" />

</LinearLayout>