<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_usabilla_preload_forms_ids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_preload_forms" />

    <Button
        android:id="@+id/btn_usabilla_preload_forms_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_preload_forms" />

    <EditText
        android:id="@+id/edit_usabilla_form_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_form_id" />

    <Button
        android:id="@+id/btn_usabilla_load_form_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_load_form" />

    <Button
        android:id="@+id/btn_usabilla_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dismiss_form" />

    <FrameLayout
        android:id="@+id/activity_main_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</LinearLayout>