<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/tv_campaign_explanation"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_usabilla_campaign_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_campaign_event_name" />

    <Button
        android:id="@+id/btn_usabilla_campaign_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_campaign_event" />

    <Button
        android:id="@+id/btn_usabilla_campaign_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_campaign" />

</LinearLayout>