<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_launch_events_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_events_activity" />

    <Button
        android:id="@+id/btn_launch_passive_feedback_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_passive_feedback_activity" />

    <Button
        android:id="@+id/btn_launch_campaign_feedback_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_campaign_feedback_activity" />

</LinearLayout>

